--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ install:
   - npm install
 
 script:
-  - yarn test
-  - yarn run build
+  - npm test
+  - CI=false npm run build
 
 deploy:
   provider: s3
