Fix naming convention: kad-website-ui → kad-site

--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: kad-website-ui
+    name: kad-site
     runtime: static
     buildCommand: npm install && npm run build
     staticPublishPath: ./build
